Ensure non-color tokens are kept as strings rather than transformed as colors

--- a/config/design-tokens/color.yml
+++ b/config/design-tokens/color.yml
@@ -103,7 +103,9 @@ props: &COLORS
   SNOW:
     value: "{!GREY200}"
   NONE:
-    value: "none"
+    value: ""
+    type: "string"
   INHERIT:
-    value: "inherit"  
+    value: "inherit"
+    type: "string"
 aliases: *COLORS
