--- a/config/design-tokens/color.yml
+++ b/config/design-tokens/color.yml
@@ -108,4 +108,7 @@ props: &COLORS
   INHERIT:
     value: "inherit"
     type: "string"
+  CURRENTCOLOR:
+    value: "currentColor"
+    type: "string"
 aliases: *COLORS
