Ensure currentColor is correctly camelcased when generated

--- a/config/design-tokens/color.yml
+++ b/config/design-tokens/color.yml
@@ -108,7 +108,7 @@ props: &COLORS
   INHERIT:
     value: "inherit"
     type: "string"
-  CURRENTCOLOR:
+  CURRENT_COLOR:
     value: "currentColor"
     type: "string"
 aliases: *COLORS
