--- a/site/package.json
+++ b/site/package.json
@@ -10,22 +10,20 @@
   "scripts": {
     "dev": "NODE_ENV=development node --preserve-symlinks server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
-    "docs:generate": "gulp docs:markdown && react-docgen ../src/components/button/button.js --out docs/content/components/_props.json --ignore [__tests__,__stories__]"
+    "start": "NODE_ENV=production node server.js"
   },
   "author": "Kalo Product",
   "license": "ISC",
   "devDependencies": {
     "@kalo/eslint-config": "^6.0.0",
-    "eslint": "^4.10.0",
-    "react-transition-group": "^2.2.1"
+    "babel-eslint": "^8.0.2",
+    "eslint": "^4.10.0"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.1",
     "apollo-client": "^2.0.3",
     "apollo-link-http": "^1.2.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
     "babel-plugin-emotion": "^8.0.12",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-transform": "^3.0.0",
@@ -50,6 +48,7 @@
     "react-emotion": "^8.0.12",
     "react-helmet": "^5.2.0",
     "react-pure-render": "^1.0.2",
+    "react-transition-group": "^2.2.1",
     "recon-config": "0.0.7",
     "recon-engine": "0.0.7",
     "styled-system": "^1.0.8",
