--- a/site/package.json
+++ b/site/package.json
@@ -9,7 +9,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "NODE_ENV=development node --preserve-symlinks server.js",
-    "build": "next build",
+    "build": "./node_modules/.bin/next build",
     "start": "NODE_ENV=production node server.js"
   },
   "author": "Kalo Product",
@@ -40,9 +40,9 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "markdown-in-js": "^1.1.3",
-    "next": "^4.1.4",
+    "next": "^4.2.1",
     "next-routes": "^1.1.0",
-    "react": "^16.0.0",
+    "react": "^16.2.0",
     "react-apollo": "^2.0.1",
     "react-dom": "^16.0.0",
     "react-emotion": "^8.0.12",
