--- a/manifest.yml
+++ b/manifest.yml
@@ -4,4 +4,4 @@ applications:
   memory: 512M
   instances: 1
   buildpack: https://github.com/cloudfoundry/nodejs-buildpack
-  command: cd site && npm install && npm run build && npm run start
+  command: cd site && npm run start
