--- a/site/package.json
+++ b/site/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-emotion": "^8.0.12",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-transform": "^3.0.0",
+    "babel-plugin-resolver": "^1.1.0",
     "css-loader": "^0.28.7",
     "emotion": "^8.0.12",
     "emotion-server": "^8.0.12",
@@ -42,6 +43,7 @@
     "markdown-in-js": "^1.1.3",
     "next": "^4.2.1",
     "next-routes": "^1.1.0",
+    "prismjs": "^1.9.0",
     "react": "^16.2.0",
     "react-apollo": "^2.0.1",
     "react-dom": "^16.0.0",
