--- a/site/package.json
+++ b/site/package.json
@@ -4,8 +4,13 @@
   "version": "1.0.0",
   "author": "Kalo Product",
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.1",
+    "apollo-client": "^2.0.3",
+    "apollo-link-http": "^1.2.0",
     "emotion": "^8.0.12",
     "emotion-server": "^8.0.12",
+    "express": "^4.16.2",
+    "express-graphql": "^0.6.11",
     "gatsby": "^1.9.149",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-emotion": "^1.1.10",
@@ -13,11 +18,25 @@
     "gatsby-remark-prismjs": "^1.2.11",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.27",
+    "glob": "^7.1.2",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
+    "isomorphic-fetch": "^2.2.1",
+    "react-apollo": "^2.0.1",
     "react-emotion": "^8.0.12",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "recon-config": "0.0.7",
+    "recon-engine": "0.0.7",
+    "slug": "^0.9.1"
+  },
+  "devDependencies": {
+    "@kalo/eslint-config": "^6.0.0",
+    "eslint": "^4.10.0"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "design system",
+    "kalo"
   ],
   "license": "MIT",
   "main": "n/a",
@@ -26,8 +45,5 @@
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "^1.10.1"
   }
 }
