--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-remark-prismjs": "^1.2.11",
     "gatsby-source-filesystem": "^1.5.11",
+    "gatsby-transformer-react-docgen": "^1.0.12",
     "gatsby-transformer-remark": "^1.7.27",
     "glob": "^7.1.2",
     "graphql": "^0.11.7",
