--- a/.eslintrc
+++ b/.eslintrc
@@ -53,6 +53,7 @@
     // definite nice to haves...
     "react/no-unused-prop-types": 0, // lots to type at this point... and flow may overtake soon
     "react/prop-types": 0, // lots to type at this point... and flow may overtake soon
+    "react/no-danger": 0,
     "class-methods-use-this": 0,
     "jsx-a11y/img-has-alt": 0,
     "jsx-a11y/label-has-for": 0,
