Move input base styling to design tokens

--- a/config/design-tokens/border-radius.yml
+++ b/config/design-tokens/border-radius.yml
@@ -1,10 +1,11 @@
 global:
   type: 'border-radius'
   category: 'layout'
-props:
+props: &BORDER_RADIUS
   BORDER_RADIUS:
     value: 4px
   BORDER_RADIUS_INPUT:
     value: 4px
   BORDER_RADIUS_BUTTON:
     value: 4px
+aliases: *BORDER_RADIUS
