--- a/package.json
+++ b/package.json
@@ -7,29 +7,28 @@
     "url": "https://github.com/kalohq/ui"
   },
   "main": "lib/components/index.js",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "scripts": {
     "start": "npm run storybook:start",
     "storybook": "npm run storybook:start",
     "storybook:start": "start-storybook -p 6006",
     "storybook:build": "build-storybook -c .storybook -o docs",
-    "compile": "npm run generate-tokens && npm run generate-icon-symbols && gulp build-production",
+    "compile":
+      "npm run generate-tokens && npm run generate-icon-symbols && gulp build-production",
     "test": "jest",
     "dist": "rimraf lib && npm run compile",
-    "copy-flow": "flow-copy-source src/components lib --ignore '{index.js,**/__tests__/*,**/__stories__/*}'",
+    "copy-flow":
+      "flow-copy-source src/components lib --ignore '{index.js,**/__tests__/*,**/__stories__/*}'",
     "typecheck": "flow",
     "lint": "eslint src",
     "precommit": "lint-staged",
     "generate-tokens": "node scripts/tokens.js",
     "generate-icon-symbols": "node scripts/icons.js",
-    "new-component": "reactman --config ./config/code-templates/reactman-config.json"
+    "new-component":
+      "reactman --config ./config/code-templates/reactman-config.json"
   },
   "lint-staged": {
-    "*.js": [
-      "eslint"
-    ]
+    "*.js": ["eslint"]
   },
   "author": "The Kalo Team",
   "license": "ISC",
@@ -93,57 +92,49 @@
     "react-addons-test-utils": "15.4.1",
     "react-dom": "15.4.1",
     "react-emotion": "^8.0.10",
-    "react-hotkeys": "0.9.0",
+    "react-hotkeys": "^0.9.0",
     "react-intl": "2.1.5",
     "react-pure-render": "1.0.2",
     "react-storybook-addon-add-stories-group": "0.1.0",
     "react-test-renderer": "15.4.1",
+    "reactman": "2.1.0",
     "rimraf": "2.6.1",
     "style-loader": "0.16.1",
     "styled-system": "^1.0.8",
     "svg-sprite": "^1.3.7",
     "theo": "^6.0.0-beta.9",
-    "webpack": "2.5.1",
-    "reactman": "2.1.0"
+    "webpack": "2.5.1"
   },
   "peerDependencies": {
     "classnames": "^2.2.5",
+    "emotion-theming": "^8.0.10",
+    "emotion": "^8.0.10",
     "lodash": "^4.17.2",
     "prop-types": "^15.5.10",
     "qs": "^5.2.1",
-    "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-emotion": "^8.0.10",
     "react-hotkeys": "^0.9.0",
     "react-intl": "^2.1.5",
-    "react-pure-render": "^1.0.2"
+    "react-pure-render": "^1.0.2",
+    "react": "^15.4.1",
+    "styled-system": "^1.0.8"
   },
   "babel": {
-    "presets": [
-      "es2015",
-      "stage-2",
-      "react"
-    ],
-    "ignore": [
-      "__stories__"
-    ]
+    "presets": ["es2015", "stage-2", "react"],
+    "ignore": ["__stories__"]
   },
   "jest": {
-    "modulePaths": [
-      "src/core",
-      "src"
-    ],
+    "modulePaths": ["src/core", "src"],
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|html)$": "<rootDir>/src/utils/test/mocks/file-mock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|html)$":
+        "<rootDir>/src/utils/test/mocks/file-mock.js",
       "\\.(css|less)$": "identity-obj-proxy"
     },
     "testEnvironment": "jsdom",
-    "testMatch": [
-      "**/__tests__/**/?(*.)(spec|test).js?(x)"
-    ],
-    "testPathIgnorePatterns": [
-      "config"
-    ],
+    "testMatch": ["**/__tests__/**/?(*.)(spec|test).js?(x)"],
+    "testPathIgnorePatterns": ["config"],
     "coverageDirectory": "./coverage/unit",
     "collectCoverage": false,
     "collectCoverageFrom": [
