--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@kalo/ui",
-  "version": "0.12.0-2",
+  "version": "0.12.0-3",
   "description": "A library of React components",
   "repository": {
     "type": "git",
     "url": "https://github.com/kalohq/ui"
   },
   "main": "lib/components/index.js",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
-    "compile":
-      "npm run generate:tokens && npm run generate:icons && gulp build-production",
+    "compile": "npm run generate:tokens && npm run generate:icons && gulp build-production",
     "test": "jest",
     "dist": "rimraf lib && npm run compile",
     "typecheck": "flow",
@@ -18,11 +19,12 @@
     "precommit": "lint-staged",
     "generate:tokens": "node scripts/tokens.js",
     "generate:icons": "node scripts/icons.js",
-    "generate:component":
-      "reactman --config ./config/code-templates/reactman-config.json"
+    "generate:component": "reactman --config ./config/code-templates/reactman-config.json"
   },
   "lint-staged": {
-    "*.js": ["eslint"]
+    "*.js": [
+      "eslint"
+    ]
   },
   "author": "The Kalo Team",
   "license": "ISC",
@@ -108,19 +110,31 @@
     "react": "^15.4.1"
   },
   "babel": {
-    "presets": ["es2015", "stage-2", "react"],
-    "ignore": ["__stories__"]
+    "presets": [
+      "es2015",
+      "stage-2",
+      "react"
+    ],
+    "ignore": [
+      "__stories__"
+    ]
   },
   "jest": {
-    "modulePaths": ["src/core", "src"],
+    "modulePaths": [
+      "src/core",
+      "src"
+    ],
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|html)$":
-        "<rootDir>/src/utils/test/mocks/file-mock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|html)$": "<rootDir>/src/utils/test/mocks/file-mock.js",
       "\\.(css|less)$": "identity-obj-proxy"
     },
     "testEnvironment": "jsdom",
-    "testMatch": ["**/__tests__/**/?(*.)(spec|test).js?(x)"],
-    "testPathIgnorePatterns": ["config"],
+    "testMatch": [
+      "**/__tests__/**/?(*.)(spec|test).js?(x)"
+    ],
+    "testPathIgnorePatterns": [
+      "config"
+    ],
     "coverageDirectory": "./coverage/unit",
     "collectCoverage": false,
     "collectCoverageFrom": [
