--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "rimraf": "2.6.1",
     "style-loader": "0.16.1",
     "svg-sprite": "^1.3.7",
-    "theo": "^6.0.0-beta.9",
+    "theo": "^6.0.0",
     "webpack": "2.5.1"
   },
   "peerDependencies": {
