Update Emotion packages and use official jest plugin

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-istanbul": "0.8.0",
     "babel-jest": "21.0.2",
     "babel-loader": "7.0.0",
-    "babel-plugin-emotion": "^8.0.10",
+    "babel-plugin-emotion": "^9.0.0",
     "babel-plugin-lodash": "3.2.11",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-builtin-extend": "1.1.0",
@@ -46,8 +46,8 @@
     "babel-preset-stage-2": "6.24.1",
     "classnames": "2.2.5",
     "css-loader": "0.28.0",
-    "emotion": "^8.0.10",
-    "emotion-theming": "^8.0.10",
+    "emotion": "^9.0.0",
+    "emotion-theming": "^9.0.0",
     "enzyme": "2.7.1",
     "enzyme-to-json": "2.0.0",
     "eslint": "3.19.0",
@@ -67,6 +67,7 @@
     "husky": "0.13.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "21.0.0",
+    "jest-emotion": "^9.0.0",
     "jest-glamor-react": "3.0.0",
     "lint-staged": "3.4.2",
     "lodash": "4.17.2",
@@ -82,7 +83,7 @@
     "react-addons-css-transition-group": "15.4.1",
     "react-addons-test-utils": "15.4.1",
     "react-dom": "15.4.1",
-    "react-emotion": "^8.0.10",
+    "react-emotion": "^9.0.0",
     "react-hotkeys": "^0.9.0",
     "react-intl": "2.1.5",
     "react-pure-render": "1.0.2",
@@ -96,14 +97,14 @@
   },
   "peerDependencies": {
     "classnames": "^2.2.5",
-    "emotion-theming": "^8.0.10",
-    "emotion": "^8.0.10",
+    "emotion-theming": "^9.0.0",
+    "emotion": "9.0.0",
     "lodash": "^4.17.2",
     "prop-types": "^15.5.10",
     "qs": "^5.2.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-emotion": "^8.0.10",
+    "react-emotion": "^9.0.0",
     "react-hotkeys": "^0.9.0",
     "react-intl": "^2.1.5",
     "react-pure-render": "^1.0.2",
