--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-istanbul": "0.8.0",
     "babel-jest": "22.4.1",
     "babel-loader": "7.0.0",
+    "babel-plugin-add-react-displayname": "0.0.5",
     "babel-plugin-emotion": "^9.0.0",
     "babel-plugin-lodash": "3.2.11",
     "babel-plugin-react-transform": "2.0.2",
