--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,6 @@
       }
     ],
     "lodash",
-    "add-react-displayname",
     [
       "transform-runtime",
       {
@@ -20,7 +19,8 @@
       {
         "globals": ["Error"]
       }
-    ]
+    ],
+    "add-react-displayname"
   ],
   "presets": ["es2015", "react", "stage-2"],
   "env": {
