--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "url": "https://github.com/kalohq/ui"
   },
   "main": "lib/components/index.js",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "scripts": {
-    "compile": "npm run generate:tokens && npm run generate:icons && gulp build-production",
+    "compile":
+      "npm run generate:tokens && npm run generate:icons && gulp build-production",
     "test": "jest",
     "dist": "rimraf lib && npm run compile",
     "typecheck": "flow",
@@ -19,12 +18,11 @@
     "precommit": "lint-staged",
     "generate:tokens": "node scripts/tokens.js",
     "generate:icons": "node scripts/icons.js",
-    "generate:component": "reactman --config ./config/code-templates/reactman-config.json"
+    "generate:component":
+      "reactman --config ./config/code-templates/reactman-config.json"
   },
   "lint-staged": {
-    "*.js": [
-      "eslint"
-    ]
+    "*.js": ["eslint"]
   },
   "author": "The Kalo Team",
   "license": "ISC",
@@ -111,38 +109,26 @@
     "react": "^15.4.1"
   },
   "babel": {
-    "presets": [
-      "es2015",
-      "stage-2",
-      "react"
-    ],
-    "ignore": [
-      "__stories__"
-    ]
+    "presets": ["es2015", "stage-2", "react"],
+    "ignore": ["__examples__"]
   },
   "jest": {
-    "modulePaths": [
-      "src/core",
-      "src"
-    ],
+    "modulePaths": ["src/core", "src"],
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|html)$": "<rootDir>/src/utils/test/mocks/file-mock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|html)$":
+        "<rootDir>/src/utils/test/mocks/file-mock.js",
       "\\.(css|less)$": "identity-obj-proxy"
     },
     "testEnvironment": "jsdom",
-    "testMatch": [
-      "**/__tests__/**/?(*.)(spec|test).js?(x)"
-    ],
-    "testPathIgnorePatterns": [
-      "config"
-    ],
+    "testMatch": ["**/__tests__/**/?(*.)(spec|test).js?(x)"],
+    "testPathIgnorePatterns": ["config"],
     "coverageDirectory": "./coverage/unit",
     "collectCoverage": false,
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/**/*.test.js",
       "!src/**/index.js",
-      "!src/**/*.stories.js",
+      "!src/**/*.examples.js",
       "!src/components/icon-symbols/**/*",
       "!src/design-tokens/**/*",
       "!src/icons/**/*"
