Use np for releases

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "main": "lib/components/index.js",
   "files": ["lib"],
   "scripts": {
+    "build": "rimraf lib && npm run compile",
     "compile":
       "npm run generate:tokens && npm run generate:icons && gulp build-production",
     "test": "jest",
-    "dist": "rimraf lib && npm run compile",
+    "release": "np --no-publish",
     "typecheck": "flow",
     "lint": "eslint src",
     "precommit": "lint-staged",
