--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-plugin-lodash": "3.2.11",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-builtin-extend": "1.1.0",
+    "babel-plugin-transform-react-display-name": "^6.25.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
