--- a/.babelrc
+++ b/.babelrc
@@ -20,7 +20,7 @@
         "globals": ["Error"]
       }
     ],
-    "add-react-displayname"
+    "babel-plugin-transform-react-display-name"
   ],
   "presets": ["es2015", "react", "stage-2"],
   "env": {
