--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-pure-render": "1.0.2",
     "react-test-renderer": "15.4.1",
     "reactman": "2.1.0",
+    "recompose": "^0.26.0",
     "rimraf": "2.6.1",
     "style-loader": "0.16.1",
     "svg-sprite": "^1.3.7",
@@ -111,7 +112,8 @@
     "react-hotkeys": "^0.9.0",
     "react-intl": "^2.1.5",
     "react-pure-render": "^1.0.2",
-    "react": "^15.4.1"
+    "react": "^15.4.1",
+    "recompose": "^0.20.2"
   },
   "babel": {
     "presets": [
