--- a/config/design-tokens/box-shadow.yml
+++ b/config/design-tokens/box-shadow.yml
@@ -3,7 +3,7 @@ global:
   category: 'layout'
 props: &BOX_SHADOW
   BOX_SHADOW_LEVEL_0:
-    value: "0"
+    value: "none"
   BOX_SHADOW_LEVEL_1:
     value: "0 3px 6px rgba(140, 140, 140, 0.08)"
   BOX_SHADOW_LEVEL_2:
