--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-test-renderer": "15.4.1",
     "reactman": "2.1.0",
     "rimraf": "2.6.1",
+    "sinon": "^4.5.0",
     "style-loader": "0.16.1",
     "svg-sprite": "^1.3.7",
     "theo": "^6.0.0",
