--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
     "css-loader": "0.28.0",
     "emotion": "^9.0.0",
     "emotion-theming": "^9.0.0",
-    "enzyme": "2.7.1",
-    "enzyme-to-json": "2.0.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-to-json": "^3.2.2",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-config-prettier": "2.4.0",
@@ -81,15 +82,15 @@
     "prettier": "1.6.1",
     "prop-types": "15.5.10",
     "qs": "5.2.1",
-    "react": "15.4.1",
-    "react-addons-css-transition-group": "15.4.1",
-    "react-addons-test-utils": "15.4.1",
-    "react-dom": "15.4.1",
+    "react": "15.6.2",
+    "react-addons-css-transition-group": "15.6.2",
+    "react-addons-test-utils": "15.6.2",
+    "react-dom": "15.6.2",
     "react-emotion": "^9.0.0",
     "react-hotkeys": "^0.9.0",
     "react-intl": "2.1.5",
     "react-pure-render": "1.0.2",
-    "react-test-renderer": "15.4.1",
+    "react-test-renderer": "15.6.2",
     "reactman": "2.1.0",
     "rimraf": "2.6.1",
     "style-loader": "0.16.1",
@@ -138,6 +139,7 @@
     "testPathIgnorePatterns": [
       "config"
     ],
+    "setupFiles": ["./src/utils/test/global-context.js"],
     "coverageDirectory": "./coverage/unit",
     "collectCoverage": false,
     "collectCoverageFrom": [
