--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kalo/ui",
-  "version": "1.11.0-0",
+  "version": "1.11.0",
   "description": "A library of React components",
   "repository": {
     "type": "git",
