--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "classnames": "2.2.5",
+    "css-loader": "0.28.0",
     "emotion": "^9.0.0",
     "emotion-theming": "^9.0.0",
     "enzyme": "^3.2.0",
@@ -66,6 +67,7 @@
     "flow-bin": "0.53.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "gulp-postcss": "^7.0.0",
     "husky": "0.13.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "22.4.1",
@@ -73,6 +75,11 @@
     "lint-staged": "3.4.2",
     "lodash": "4.17.2",
     "np": "^3.0.4",
+    "postcss-cli": "3.2.0",
+    "postcss-css-variables": "0.7.0",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "9.1.0",
+    "postcss-loader": "1.3.3",
     "prettier": "1.6.1",
     "prop-types": "15.5.10",
     "qs": "5.2.1",
