Use pink for primary button

--- a/config/design-tokens/button.yml
+++ b/config/design-tokens/button.yml
@@ -5,13 +5,13 @@ imports:
   - ./color.yml
 props:
   BUTTON_PRIMARY_DEFAULT_BACKGROUND_COLOR:
-    value: "{!GREEN500}"
+    value: "{!PINK500}"
   BUTTON_PRIMARY_HOVER_BACKGROUND_COLOR:
-    value: "{!GREEN400}" 
+    value: "#f78692" 
   BUTTON_PRIMARY_ACTIVE_BACKGROUND_COLOR:
-    value: "{!GREEN600}"
+    value: "{!PINK600}"
   BUTTON_PRIMARY_FOCUS_SHADOW:
-    value: "{!GREEN300}"
+    value: "{!PINK300}"
   BUTTON_SECONDARY_DEFAULT_BACKGROUND_COLOR:
     value: "{!NAVY700}"
   BUTTON_SECONDARY_HOVER_BACKGROUND_COLOR:
