Add build step to compile component CSS files in to single bundle

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "rimraf lib && npm run compile",
-    "compile": "npm run generate:tokens && npm run generate:icons && gulp build-production",
+    "compile": "npm run generate:tokens && npm run generate:icons && gulp build-react-package",
     "test": "jest",
     "release": "np --no-yarn --no-cleanup --any-branch",
     "typecheck": "flow",
@@ -67,6 +67,7 @@
     "flow-bin": "0.53.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-postcss": "^7.0.0",
     "husky": "0.13.3",
     "identity-obj-proxy": "^3.0.0",
