Add npm script to build CSS package

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "generate:tokens": "node scripts/tokens.js",
     "generate:icons": "node scripts/icons.js",
     "generate:component": "reactman --config ./config/code-templates/reactman-config.json",
-    "version": "npm run build"
+    "version": "npm run build",
+    "build:css": "gulp build-css-package"
   },
   "lint-staged": {
     "*.js": [
