--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "rimraf lib && npm run compile",
     "compile": "npm run generate:tokens && npm run generate:icons && gulp build-production",
-    "test": "jest",
+    "test": "jest --silent",
     "release": "np --no-yarn --no-cleanup --any-branch",
     "typecheck": "flow",
     "lint": "eslint src",
