--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "gatsby-transformer-react-docgen": "^1.0.12",
     "gatsby-transformer-remark": "^1.7.27",
     "glob": "^7.1.2",
+    "react-element-to-jsx-string": "^14.0.1",
     "react-emotion": "^9.0.0",
     "react-helmet": "^5.2.0",
     "slug": "^0.9.1"
