--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "lint-staged": "3.4.2",
     "lodash": "4.17.2",
     "np": "^3.0.4",
+    "polished": "^2.0.0",
     "postcss-cli": "3.2.0",
     "postcss-css-variables": "0.7.0",
     "postcss-cssnext": "^3.0.2",
@@ -107,6 +108,7 @@
     "emotion-theming": "^9.0.0",
     "emotion": "^9.0.0",
     "lodash": "^4.17.2",
+    "polished": "^2.0.0",
     "prop-types": "^15.5.10",
     "qs": "^5.2.1",
     "react-addons-css-transition-group": "^15.4.1",
@@ -157,8 +159,5 @@
       "!src/design-tokens/**/*",
       "!src/icons/**/*"
     ]
-  },
-  "dependencies": {
-    "polished": "^2.0.0"
   }
 }
