--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "lint-staged": "3.4.2",
     "lodash": "4.17.5",
     "np": "^3.0.4",
+    "polished": "^2.1.1",
     "postcss-cli": "3.2.0",
     "postcss-css-variables": "0.7.0",
     "postcss-cssnext": "^3.0.2",
@@ -106,6 +107,7 @@
     "emotion-theming": "^9.0.0",
     "emotion": "^9.0.0",
     "lodash": "^4.17.2",
+    "polished": "^2.1.1",
     "prop-types": "^15.5.10",
     "qs": "^5.2.1",
     "react-addons-css-transition-group": "^15.4.1",
