--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "sinon": "^4.5.0",
     "style-loader": "0.16.1",
     "svg-sprite": "^1.3.7",
-    "theo": "^6.0.0",
+    "theo": "^8.0.0-beta.2",
     "webpack": "2.5.1"
   },
   "peerDependencies": {
