--- a/config/design-tokens/input.yml
+++ b/config/design-tokens/input.yml
@@ -6,13 +6,13 @@ imports:
   - ./border-radius.yml
 props:
   INPUT_DEFAULT_BORDER:
-    value: '1px solid {!GREY400}'
+    value: 1px solid {!GREY400}
   INPUT_HOVER_BORDER:
-    value: '1px solid {!GREY500}'
+    value: 1px solid {!GREY500}
   INPUT_ACTIVE_BORDER:
-    value: '1px solid {!BLUE500}'
+    value: 1px solid {!BLUE500}
   INPUT_DISABLED_BORDER:
-    value: '1px solid {!GREY400}'
+    value: 1px solid {!GREY400}
   INPUT_DISABLED_BACKGROUND:
     type: color
     value: '{!NAVY300}'
@@ -20,7 +20,7 @@ props:
     type: color
     value: '{!NAVY600}'
   INPUT_READONLY_BORDER:
-    value: '1px dashed {!GREY400}'
+    value: 1px dashed {!GREY400}
   INPUT_READONLY_BACKGROUND:
     type: color
     value: '{!NAVY300}'
