Fix design tokens (#231)
* Bump Theo to latest version

* Update design tokens to ensure correct types for non-string values

* Update generated design tokens

* Update snapshots

* Use actual value for none color

* Cleanup token meta

* Regenerate tokens

* Use non-value empty string for none value

* Regenerate tokens

* Use non strings for font weights

--- a/config/design-tokens/alerts.yml
+++ b/config/design-tokens/alerts.yml
@@ -1,14 +1,14 @@
 global:
-  type: 'color'
-  category: 'alerts'
+  type: color
+  category: alerts
 imports:
   - ./color.yml
 props:
   INFO:
-    value: "#E8FAFC"
+    value: '#E8FAFC'
   CONFIRMATION:
-    value: "#E5F7F1"
+    value: '#E5F7F1'
   ERROR:
-    value: "#FFEBEE"
+    value: '#FFEBEE'
   WARNING:
-    value: "#FFF6D8"
+    value: '#FFF6D8'
