--- a/site/package.json
+++ b/site/package.json
@@ -34,7 +34,11 @@
     "eslint-plugin-react": "7.0.0",
     "prettier": "1.6.1"
   },
-  "keywords": ["gatsby", "design system", "kalo"],
+  "keywords": [
+    "gatsby",
+    "design system",
+    "kalo"
+  ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
