Update navy300 color

--- a/config/design-tokens/color.yml
+++ b/config/design-tokens/color.yml
@@ -57,7 +57,7 @@ props: &COLORS
   BLUE700:
     value: '#259FBA'
   NAVY300:
-    value: '#ECEFF1'
+    value: '#EEF4FA'
   NAVY400:
     value: '#8393AC'
   NAVY500:
