--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
   "license": "ISC",
   "devDependencies": {
     "@kalo/eslint-config": "6.0.0",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "7.2.3",
-    "babel-istanbul": "0.8.0",
+    "babel-istanbul": "^0.12.2",
     "babel-jest": "22.4.1",
     "babel-loader": "7.0.0",
     "babel-plugin-add-react-displayname": "0.0.5",
-    "babel-plugin-emotion": "^9.0.0",
+    "babel-plugin-emotion": "^9.2.11",
     "babel-plugin-lodash": "3.2.11",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-builtin-extend": "1.1.0",
@@ -48,11 +48,11 @@
     "babel-preset-stage-2": "6.24.1",
     "classnames": "2.2.5",
     "css-loader": "0.28.0",
-    "emotion": "^9.2.6",
+    "emotion": "^9.2.12",
     "emotion-theming": "^9.2.6",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-15": "^1.0.5",
-    "enzyme-to-json": "^3.2.2",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-15": "^1.2.0",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-config-prettier": "2.4.0",
@@ -64,18 +64,18 @@
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "flow-bin": "0.53.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^7.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^7.0.0",
     "husky": "0.13.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "22.4.1",
-    "jest-emotion": "^9.0.0",
+    "jest-emotion": "^9.2.11",
     "lint-staged": "3.4.2",
     "lodash": "4.17.5",
     "np": "^3.0.4",
-    "polished": "^2.1.1",
+    "polished": "^2.3.0",
     "postcss-cli": "3.2.0",
     "postcss-css-variables": "0.7.0",
     "postcss-cssnext": "^3.0.2",
@@ -88,7 +88,7 @@
     "react-addons-css-transition-group": "15.6.2",
     "react-addons-test-utils": "15.6.2",
     "react-dom": "15.6.2",
-    "react-emotion": "^9.2.6",
+    "react-emotion": "^9.2.12",
     "react-hotkeys": "^0.9.0",
     "react-intl": "2.1.5",
     "react-test-renderer": "15.6.2",
@@ -96,8 +96,8 @@
     "rimraf": "2.6.1",
     "sinon": "^4.5.0",
     "style-loader": "0.16.1",
-    "svg-sprite": "^1.3.7",
-    "theo": "^8.0.0-beta.2"
+    "svg-sprite": "^1.5.0",
+    "theo": "^8.0.0"
   },
   "peerDependencies": {
     "classnames": "^2.2.5",
