--- a/site/package.json
+++ b/site/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kalo Product",
   "dependencies": {
+    "color": "^3.1.0",
     "emotion": "^9.0.0",
     "emotion-server": "^9.0.0",
     "gatsby": "^1.9.149",
