--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "jest": "22.4.1",
     "jest-emotion": "^9.2.11",
     "lint-staged": "3.4.2",
-    "lodash": "4.17.5",
+    "lodash": "^4.17.11",
     "np": "^3.1.0",
     "polished": "^2.3.3",
     "postcss-cli": "3.2.0",
