Use `npm ci` in Circle
Because `npm ci` uses `package-lock.json`, we can now claim to have
reproducible builds with confidence.

A nice side effect is that we also skip installing dependencies when
it's not necessary, speeding up builds slightly.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,15 @@ jobs:
       - restore_cache:
           keys:
           - dependencies-{{ checksum "package-lock.json" }}
-      - run: npm install
+      - run:
+          name: Install dependencies
+          # only run npm ci if node_modules doesn't exist, as it clears
+          # out node_modules and installs everything from scratch,
+          # removing the benefit from using circle's caching
+          command: |
+            if [ ! -d node_modules ]; then
+              npm ci
+            fi
       - save_cache:
           paths:
             - node_modules
